- - Model 512 lost a Slicer
- - Model 1024 lost 2 Slicers and 2 Disruptors
- Nerfed the larger Quarg builds
- - Elderdragon lost 2 Skylances
- - Elderdragon and Empyrealdragon lost some armor plates and shield gens
- Rebalanced the Heliarch Punisher
- - Reduced shield and armor count on both veteran builds significantly
- - Added inertial neutralizers to increase speed to around 5
- Added the Marauder Raider
- Remade the Pillager and the stock Raider with larger layouts
- Massively reduced the energy cost of the Finisher
- Tweaked the Ionic Afterburner
- - Power dropped from 58 to 43.5
- - Energy Consumption (passive and active) dropped from 10 to 9.125
- Tweaked the Bellows Afterburner
- - Power increased from 58 to 153
- - EC increased from 10 to 14.5
- Added custom button images for drone bays
- Modified Dragonflame Cannon to fit in superweapon slots
- Modified Emerald Sword superweapon slot to fit the 5x5 square with cut corners style
- Increased Skylance damage from 360 to 405 (+12.5% damage) and added 60 ion damage
- Fixed issue with missing hit effect for the Detainer
- Increased ion damage of various ion weapons 10fold
- Doubled ion damage of Ka'het Nullifier
- Changed "superweapons" to weapon type "X"
- Changed superweapon slots on the 750, 1024, Emerald Sword, and Heron to include X slots


0.13.2 "Sol Arach" update

Changelog:
- Added the Zubera, the Zambor, and the Zalgi to the Pug faction
- Removed the Arfecta from Pug base defenses
- Split the Coalition Civilians and the Heliarchs into different factions
- - Heliarch Security Forces encounterable at 450+, Trisolar Coalition at 250+
- - Existing Coalition research, tech, and bases will go to the Heliarchs
- Fixed issue with missing Marauder Raider tech
- Added shield cooldown values to generators, shields, coolers, engines, etc
- - Values are identical to energy cooldown values

Todo:
Increase energy cost of torpedoes tenfold to match the Finisher