@@ -2,5 +2,37 @@
   "ItemType": 8,
   "Id": 3026,
   "ShipId": 3026,
-  "Components": []
+  "Components": [
+    {
+      "ComponentId": 1282,
+      "Locked": true,
+      "X": 5,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 1253,
+      "Locked": true,
+      "X": 6,
+      "Y": 10,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 1252,
+      "Locked": true,
+      "X": 4,
+      "Y": 10,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 1249,
+      "Locked": true,
+      "X": 8,
+      "BarrelId": 1
+    },
+    {
+      "ComponentId": 1249,
+      "Locked": true,
+      "X": 2
+    }
+  ]
 }
