@@ -2,5 +2,42 @@
   "ItemType": 8,
   "Id": 3025,
   "ShipId": 3025,
-  "Components": []
+  "Components": [
+    {
+      "ComponentId": 1250,
+      "Locked": true,
+      "X": 4,
+      "Y": 1
+    },
+    {
+      "ComponentId": 1250,
+      "Locked": true,
+      "X": 8,
+      "Y": 1,
+      "BarrelId": 1
+    },
+    {
+      "ComponentId": 1252,
+      "Locked": true,
+      "X": 7,
+      "Y": 12,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 1253,
+      "Locked": true,
+      "X": 5,
+      "Y": 12,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 1281,
+      "Locked": true,
+      "X": 6,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    }
+  ]
 }
