@@ -2,5 +2,208 @@
   "ItemType": 8,
   "Id": 1391,
   "ShipId": 431,
-  "Components": []
+  "Components": [
+    {
+      "ComponentId": 1280,
+      "Locked": true,
+      "X": 15,
+      "Y": 19,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 1256,
+      "Locked": true,
+      "X": 17,
+      "Y": 30,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 1257,
+      "Locked": true,
+      "X": 13,
+      "Y": 30,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 1252,
+      "Locked": true,
+      "X": 21,
+      "Y": 32,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 1253,
+      "Locked": true,
+      "X": 11,
+      "Y": 32,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 3025,
+      "Locked": true,
+      "X": 13,
+      "Y": 11,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 3025,
+      "Locked": true,
+      "X": 18,
+      "Y": 11,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 3025,
+      "Locked": true,
+      "X": 18,
+      "Y": 8,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 3025,
+      "Locked": true,
+      "X": 13,
+      "Y": 8,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 3025,
+      "Locked": true,
+      "X": 25,
+      "Y": 11,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 3025,
+      "Locked": true,
+      "X": 6,
+      "Y": 11,
+      "BarrelId": -1
+    },
+    {
+      "ComponentId": 3026,
+      "Locked": true,
+      "X": 28,
+      "Y": 11,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 3026,
+      "Locked": true,
+      "X": 4,
+      "Y": 11,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 3026,
+      "Locked": true,
+      "X": 11,
+      "Y": 30,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 3026,
+      "Locked": true,
+      "X": 21,
+      "Y": 30,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 3026,
+      "Locked": true,
+      "X": 12,
+      "Y": 25,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 3026,
+      "Locked": true,
+      "X": 20,
+      "Y": 25,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 3026,
+      "Locked": true,
+      "X": 20,
+      "Y": 23,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 3026,
+      "Locked": true,
+      "X": 12,
+      "Y": 23,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 1250,
+      "Locked": true,
+      "X": 19,
+      "Y": 6,
+      "BarrelId": 3,
+      "KeyBinding": 2
+    },
+    {
+      "ComponentId": 1250,
+      "Locked": true,
+      "X": 13,
+      "Y": 6,
+      "BarrelId": 2,
+      "KeyBinding": 2
+    },
+    {
+      "ComponentId": 1250,
+      "Locked": true,
+      "X": 14,
+      "KeyBinding": 2
+    },
+    {
+      "ComponentId": 1250,
+      "Locked": true,
+      "X": 18,
+      "BarrelId": 1,
+      "KeyBinding": 2
+    },
+    {
+      "ComponentId": 2249,
+      "Locked": true,
+      "X": 21,
+      "Y": 11,
+      "BarrelId": 5,
+      "KeyBinding": 3
+    },
+    {
+      "ComponentId": 2249,
+      "Locked": true,
+      "X": 10,
+      "Y": 11,
+      "BarrelId": 4,
+      "KeyBinding": 3
+    },
+    {
+      "ComponentId": 2249,
+      "Locked": true,
+      "X": 20,
+      "Y": 27,
+      "BarrelId": 7,
+      "KeyBinding": 3
+    },
+    {
+      "ComponentId": 2249,
+      "Locked": true,
+      "X": 11,
+      "Y": 27,
+      "BarrelId": 6,
+      "KeyBinding": 3
+    }
+  ]
 }
